--- a/dconf-settings/gnome-settings.ini
+++ b/dconf-settings/gnome-settings.ini
@@ -7,7 +7,7 @@ window-is-maximized=false
 window-width=540
 
 [com/mattjakeman/ExtensionManager]
-last-used-version='0.4.0'
+last-used-version='0.4.2'
 style-variant='use-default'
 
 [com/rafaelmardojai/Blanket]
@@ -136,8 +136,8 @@ target-units='radian'
 word-size=64
 
 [org/gnome/control-center]
-last-panel='keyboard'
-window-state=(954, 774, false)
+last-panel='mouse'
+window-state=(1141, 776, false)
 
 [org/gnome/desktop/a11y/magnifier]
 mag-factor=1.0
@@ -149,6 +149,12 @@ folder-children=['YaST', '4f30ef93-ae2e-4d81-8628-5dd4255b7b9e']
 apps=['qvidcap.desktop', 'qv4l2.desktop', 'mpv.desktop', 'org.pwmt.zathura.desktop', 'firewall-config.desktop', 'xterm.desktop', 'conky.desktop', 'nnn.desktop', 'uxterm.desktop', 'avahi-discover.desktop', 'bvnc.desktop', 'bssh.desktop', 'nvim.desktop', 'org.gnome.Extensions.desktop', 'btop.desktop', 'emacs.desktop']
 name='not GUI'
 translate=false
+
+[org/gnome/desktop/app-folders/folders/Utilities]
+apps=['gnome-abrt.desktop', 'gnome-system-log.desktop', 'nm-connection-editor.desktop', 'org.gnome.baobab.desktop', 'org.gnome.Connections.desktop', 'org.gnome.DejaDup.desktop', 'org.gnome.Dictionary.desktop', 'org.gnome.DiskUtility.desktop', 'org.gnome.eog.desktop', 'org.gnome.Evince.desktop', 'org.gnome.FileRoller.desktop', 'org.gnome.fonts.desktop', 'org.gnome.seahorse.Application.desktop', 'org.gnome.tweaks.desktop', 'org.gnome.Usage.desktop', 'vinagre.desktop']
+categories=['X-GNOME-Utilities']
+name='X-GNOME-Utilities.directory'
+translate=true
 
 [org/gnome/desktop/app-folders/folders/YaST]
 categories=['X-SuSE-YaST']
@@ -181,8 +187,8 @@ translate=true
 [org/gnome/desktop/background]
 color-shading-type='solid'
 picture-options='zoom'
-picture-uri='file:///home/twilight/.config/.local/share/backgrounds/2023-06-24-13-33-42-coffee-cup.jpg'
-picture-uri-dark='file:///home/twilight/.config/.local/share/backgrounds/2023-06-24-13-33-42-coffee-cup.jpg'
+picture-uri='file:///home/twilight/.config/.local/share/backgrounds/2023-06-30-19-11-08-mushroom-gruvbox-style.jpg'
+picture-uri-dark='file:///home/twilight/.config/.local/share/backgrounds/2023-06-30-19-11-08-mushroom-gruvbox-style.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 show-desktop-icons=true
@@ -296,6 +302,7 @@ repeat-interval=uint32 15
 
 [org/gnome/desktop/peripherals/mouse]
 accel-profile='flat'
+natural-scroll=true
 
 [org/gnome/desktop/peripherals/touchpad]
 click-method='fingers'
@@ -314,7 +321,7 @@ remove-old-trash-files=true
 color-shading-type='solid'
 lock-delay=uint32 0
 picture-options='zoom'
-picture-uri='file:///home/twilight/.config/.local/share/backgrounds/2023-06-24-13-33-42-coffee-cup.jpg'
+picture-uri='file:///home/twilight/.config/.local/share/backgrounds/2023-06-30-19-11-08-mushroom-gruvbox-style.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -594,8 +601,8 @@ app-picker-layout=[{'4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <0>}>,
 command-history=['gnome-screenshot --delay=5', 'ls', 'r', 'gnome-restart']
 disable-extension-version-validation=true
 disable-user-extensions=false
-disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com', 'time-awareness@gnome-extensions.kapranoff.ru']
-enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'gnome-ui-tune@itstime.tech', 'arch-update@RaphaelRochet', 'openweather-extension@jenslody.de', 'unblank@sun.wxg@gmail.com']
+disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com', 'time-awareness@gnome-extensions.kapranoff.ru', 'openweather-extension@jenslody.de', 'Vitals@CoreCoding.com']
+enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'gnome-ui-tune@itstime.tech', 'arch-update@RaphaelRochet', 'unblank@sun.wxg@gmail.com']
 favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'emacsclient.desktop', 'com.rafaelmardojai.Blanket.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
@@ -806,7 +813,7 @@ unblur-in-overview=false
 
 [org/gnome/shell/extensions/caffeine]
 countdown-timer=30
-indicator-position-max=2
+indicator-position-max=1
 toggle-shortcut=['<Shift><Super>c']
 
 [org/gnome/shell/extensions/clipboard-indicator]
