--- a/dconf-settings/gnome-settings.ini
+++ b/dconf-settings/gnome-settings.ini
@@ -136,7 +136,7 @@ target-units='radian'
 word-size=64
 
 [org/gnome/control-center]
-last-panel='mouse'
+last-panel='user-accounts'
 window-state=(1141, 776, false)
 
 [org/gnome/desktop/a11y/magnifier]
@@ -603,7 +603,7 @@ disable-extension-version-validation=true
 disable-user-extensions=false
 disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com', 'time-awareness@gnome-extensions.kapranoff.ru', 'openweather-extension@jenslody.de', 'Vitals@CoreCoding.com']
 enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'gnome-ui-tune@itstime.tech', 'arch-update@RaphaelRochet', 'unblank@sun.wxg@gmail.com']
-favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'emacsclient.desktop', 'com.rafaelmardojai.Blanket.desktop']
+favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'emacsclient.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
 
